2010-08-13  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Update @EXAMPLEFILE dependencies.

2010-08-10  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Change dependency to $(srcdir)/images.mk.

2010-08-08  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Add documentation dependency on images.mk.
	* interpreter/config-images.sh: Create images.mk in passed in srcdir, 
	rather than pwd.

2010-08-08  Rik <octave@nomad.inbox5.com>

	* interpreter/images.awk: HTML images depend on octave.html/index.html.

2010-08-01  Rik <octave@nomad.inbox5.com>

	* interpreter/basics.txi, interpreter/contrib.txi,
	interpreter/diagperm.txi, interpreter/dynamic.txi, interpreter/eos.txi,
	interpreter/expr.txi, interpreter/geometry.txi,
	interpreter/install.txi, interpreter/matrix.txi,
	interpreter/numbers.txi, interpreter/oop.txi, interpreter/plot.txi,
	interpreter/sparse.txi, interpreter/stats.txi, interpreter/testfun.txi,
	interpreter/tips.txi: Grammarcheck documentation.  Add @noindent lines
	and ensure line length is less than 80.

2010-07-28  Rik <octave@nomad.inbox5.com>

	* interpreter/arith.txi, interpreter/audio.txi, interpreter/basics.txi,
	interpreter/container.txi, interpreter/contrib.txi,
	interpreter/debug.txi, interpreter/diagperm.txi,
	interpreter/diffeq.txi, interpreter/dynamic.txi, interpreter/emacs.txi,
	interpreter/errors.txi, interpreter/eval.txi, interpreter/expr.txi,
	interpreter/func.txi, interpreter/image.txi, interpreter/install.txi,
	interpreter/interp.txi, interpreter/intro.txi, interpreter/io.txi,
	interpreter/linalg.txi, interpreter/matrix.txi, interpreter/nonlin.txi,
	interpreter/numbers.txi, interpreter/optim.txi,
	interpreter/package.txi, interpreter/plot.txi, interpreter/poly.txi,
	interpreter/quad.txi, interpreter/sparse.txi, interpreter/stmt.txi,
	interpreter/strings.txi, interpreter/testfun.txi, interpreter/tips.txi,
	interpreter/var.txi: Grammarcheck .txi documentation files.
